# opencode-deck

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  folder_picker.py  harness.py  main.py  opencode_client.py  session_status.py  status_stream.py  store.py  task_spec.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte
