[project]
name = "opencode-deck"
version = "0.1.0"
description = "OpenDeck: a lightweight OpenCode server monitor and task dispatch console."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
opendeck = "app.main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.uvicorn]
factory = false
